[package]
name = "axidraw-over-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
prost = "0.12"
serialport = "4.3.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
warp = "0.3"

[build-dependencies]
tonic-build = "0.11"
